Add simple isomorphism test case for Pass statement Add initial test Data